fix user typing message not showing. stop user typing message on other user disconnect

--- a/assets/scss/modules/_chat.scss
+++ b/assets/scss/modules/_chat.scss
@@ -113,7 +113,7 @@
 	width: 24px;
 	height: 24px;
 	background-size: 100%;
-
+	display: none;
 	.incoming &{
 		display: block;
 	}
